deployment/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: person-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: person-service
                port:
                  number: 8080
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
